--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,10 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>Change or remove this page</h1>
-=======
-        <h1>Hello World!</h1>
->>>>>>> 2b8421addb76b7179739616d1ee65101ed7c0546
+        <h1> Hello World </h1>
     </body>
 </html>
